refactor
Signed-off-by: TimothyW553 <timothy.art@gmail.com>